<resources>
    <string name="app_name">BookTruck</string>

    <string name="hand_over_books">Hand Over Books</string>
    <string name="view_books">View Books</string>
    <string name="receive">Receive</string>
    <string name="back">back</string>
    <string name="borrow">Borrow</string>
    <string name="enter">Enter</string>
    <string name="scan">Scan</string>
    <string name="enter_isbn_code_here">Enter ISBN Code Here</string>
    <string name="user_name">User Name</string>
    <string name="user_email">test@ualberta.ca</string>
    <string name="user_phone_number">888–888–8888</string>
    <string name="user_info">Additional Info…</string>
    <string name="returning">Return</string>
    <string name="return_book">Return Book</string>
    <string name="confirm_returning">Confirm Returning</string>
    <string name="confirm_receiving">Confirm Receiving</string>
    <string name="confirm_handover">Confirm Handover</string>
    <string name="finish_viewing">Finish Viewing</string>
    <string name="pickup_location">Pick-Up Location</string>
    <string name="book_not_exist">This book does not exist…</string>


    <string name="setting">setting</string>
    <string name="borrowed_books">Borrowed Books</string>
    <string name="receive_book">Receive Book</string>
    <string name="title_activity_maps">Map</string>
    <string name="mybook">mybook</string>
    <string name="request">request</string>
    <string name="borrowIcon">borrow</string>
    <string name="re_turn">return</string>

</resources>